feat: search route and logging
